@startuml

title __GRÁFICA's Class Diagram__\n

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.Barras {
          ~ panel : JPanel
          ~ ponderaciones : int[]
          + Barras()
          + getPanel()
          + init()
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.BarrasSegundos {
          ~ contenido : String
          ~ data : String
          ~ panel : JPanel
          ~ valores : int[]
          + BarrasSegundos()
          + FVC()
          + LVC()
          + ODC()
          + Ol()
          + StringToInt()
          + getPanel()
          + init()
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      abstract class com.company.Gráfica.GraphicG {
          # nombre : String
          + GraphicG()
          + GraphicG()
          + Setting()
          {abstract} + getPanel()
          {abstract} + init()
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      interface com.company.Gráfica.IGraph {
          {abstract} + init()
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.Menu {
          ~ AlertsApiWave : JButton
          ~ contenido : String
          ~ contenido2 : String
          ~ errorsApiWave : JButton
          ~ graficas : JButton
          ~ label : JLabel
          ~ label1 : JLabel
          ~ label2 : JLabel
          ~ others : JButton
          ~ ponderaciones : int[]
          ~ rendi : JButton
          ~ rendimiento : int
          ~ resultApiWave : JButton
          ~ structuralE : JButton
          ~ url : String
          + Menu()
          + actionPerformed()
          + componentes()
          + panel()
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.Seccion3d {
          ~ panel : JPanel
          ~ ponderacion : int[]
          + Seccion3d()
          + getPanel()
          + init()
      }
    }
  }
  

  namespace com.company {
    namespace Gráfica {
      class com.company.Gráfica.VentanaPrincipal {
          ~ frame : JFrame
          ~ label : JLabel
          ~ panel : JPanel
          ~ reset : JButton
          ~ send : JButton
          ~ ta : JTextArea
          ~ tf : JTextField
          + VentanaPrincipal()
          + actionPerformed()
      }
    }
  }
  

  com.company.Gráfica.Barras -up-|> com.company.Gráfica.GraphicG
  com.company.Gráfica.BarrasSegundos -up-|> com.company.Gráfica.GraphicG
  com.company.Gráfica.GraphicG .up.|> com.company.Gráfica.IGraph
  com.company.Gráfica.GraphicG -up-|> javax.swing.JFrame
  com.company.Gráfica.Menu .up.|> java.awt.event.ActionListener
  com.company.Gráfica.Menu -up-|> javax.swing.JFrame
  com.company.Gráfica.Menu o-- com.company.Wave.DatosWave : wave
  com.company.Gráfica.Seccion3d -up-|> com.company.Gráfica.GraphicG
  com.company.Gráfica.VentanaPrincipal .up.|> java.awt.event.ActionListener
  com.company.Gráfica.VentanaPrincipal -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
